<resources>
    <string name="app_name">The student App</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>
    <string name="the_student_app">The student App</string>
    <!-- Preference Titles -->
    <string name="messages_header">Vos Quizz</string>
    <string name="sync_header">Sync</string>
    <string name="tab_text_1">Leçon</string>
    <string name="tab_text_2">Question</string>
    <string name="settings_id">Identifiants de compte</string>
    <string name="settings_changeAccount">Changer le compte</string>
    <string name="settings_playNumber">Nombre de quiz joué</string>
    <string name="settings_nbQuiz">Nombre de quiz créé</string>
    <string name="settings_stats_menu">Statistiques</string>
    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>
    <string name="signature_title">Quizz 1</string>
    <string name="id_user">id_user</string>
    <string name="password">password</string>
    <!-- create_quiz -->
    <string name="create_quiz_ph_reponses">Écrivez votre réponse</string>
    <string name="create_quiz_ph_title">Écrivez un titre</string>
    <string name="create_quiz_ph_description">Écrivez une courte description</string>
    <string name="create_quiz_ph_lesson">Écrivez une petite leçon</string>
    <string name="create_quiz_ph_question">Écrivez une question</string>
    <string name="create_quiz_title">Titre</string>
    <string name="create_quiz_bigTitle">Créer un quiz</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>